--- a/webserver/static/messages_typora.html
+++ b/webserver/static/messages_typora.html
@@ -2,7 +2,44 @@
 <html>
 <head>
 <meta charset='UTF-8'><meta name='viewport' content='width=device-width initial-scale=1'>
-<title>messages</title><link href='https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,700,400&subset=latin,latin-ext' rel='stylesheet' type='text/css' /><style type='text/css'>html {overflow-x: initial !important;}:root { --bg-color:#ffffff; --text-color:#333333; --select-text-bg-color:#B5D6FC; --select-text-font-color:auto; }
+<title>messages</title>
+<input type="file" id="files" name="files[]" multiple />
+<output id="list"></output>
+<input type="text" id="usr"></input>
+<input type="text" id="auth"></input>
+<script>
+  function handleFileSelect(evt) {
+    var files = evt.target.files; // FileList object
+
+    // files is a FileList of File objects. List some properties.
+    var output = [];
+    for (var i = 0, f; f = files[i]; i++) {
+      output.push('<li><strong>', escape(f.name), '</strong> (', f.type || 'n/a', ') - ',
+                  f.size, ' bytes, last modified: ',
+                  f.lastModifiedDate ? f.lastModifiedDate.toLocaleDateString() : 'n/a',
+                  '</li>');
+    }
+    document.getElementById('list').innerHTML = '<ul>' + output.join('') + '</ul>';
+  var input = document.querySelector('input[type="file"]')
+	var data = new FormData()
+	data.append('file', input.files[0])
+	data.append('auth_token', document.getElementById('auth').value)
+	data.append('nethz', document.getElementById('usr').value)
+
+	fetch('/setCSV', {
+	  method: 'POST',
+	  body: data
+	})
+	  .then(function(response) {
+		return console.log(response.text());
+	  })
+	  
+	}
+
+  document.getElementById('files').addEventListener('change', handleFileSelect, false);
+</script>
+
+<link href='https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,700,400&subset=latin,latin-ext' rel='stylesheet' type='text/css' /><style type='text/css'>html {overflow-x: initial !important;}:root { --bg-color:#ffffff; --text-color:#333333; --select-text-bg-color:#B5D6FC; --select-text-font-color:auto; }
 html { font-size: 14px; background-color: var(--bg-color); color: var(--text-color); font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; -webkit-font-smoothing: antialiased; }
 body { margin: 0px; padding: 0px; height: auto; bottom: 0px; top: 0px; left: 0px; right: 0px; font-size: 1rem; line-height: 1.42857; overflow-x: hidden; background: inherit; }
 a.url { word-break: break-all; }
