--- a/webserver/static/main_profile.html
+++ b/webserver/static/main_profile.html
@@ -36,13 +36,15 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Courses<span class="sr-only">(current)</span></a>
+                        <li class="nav-item active">
+                <a class="nav-link" href="/courses.html">Courses<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">My Feedback</a>
             </li>
-        </ul>
+            <li class="nav-item">
+                <a class="nav-link" href="/static/adminPage.html">Admin</a>
+            </li>        </ul>
 
         <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
