--- a/webserver/static/adminPage.html
+++ b/webserver/static/adminPage.html
@@ -108,13 +108,13 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
+            <li class="nav-item">
                 <a class="nav-link" href="/courses.html">Courses<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">My Feedback</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item admin">
                 <a class="nav-link" href="/static/adminPage.html">Admin</a>
             </li>
         </ul>
