--- a/webserver/static/userLogin.html
+++ b/webserver/static/userLogin.html
@@ -29,6 +29,20 @@
 
 <body>
 
+<script>
+function postreq(){
+	var data = new FormData()
+	data.append('nethz', document.getElementById('inputUsername').value)
+
+	fetch('/setCSV', {
+	  method: 'POST',
+	  body: data
+	})
+	  .then(function(response) {
+		return console.log(response.text());
+	  })
+}
+</script>
     <div class="container col-md-4 col-offset-4" style="margin-top: 90px">
         <h1 class="form-heading">Login</h1>
             <div class="login-form">
@@ -38,7 +52,7 @@
                         <p>Please enter your nethz username and password</p>
                     </div>
 
-                    <form id="Login" method="POST" action="/userLogin">
+                    <form id="Login">
 
                         <div class="form-group">
                             <input name="nethz" type="text" class="form-control" id="inputUsername" placeholder="Username">
