--- a/webserver/static/userLogin.html
+++ b/webserver/static/userLogin.html
@@ -29,20 +29,6 @@
 
 <body>
 
-<script>
-function postreq(){
-	var data = new FormData()
-	data.append('nethz', document.getElementById('inputUsername').value)
-
-	fetch('/userLogin', {
-	  method: 'POST',
-	  body: data
-	})
-	  .then(function(response) {
-		return console.log(response.text());
-	  })
-}
-</script>
     <div class="container col-md-4 col-offset-4" style="margin-top: 90px">
         <h1 class="form-heading">Login</h1>
             <div class="login-form">
@@ -52,7 +38,7 @@ function postreq(){
                         <p>Please enter your nethz username and password</p>
                     </div>
 
-                    <form id="Login">
+                    <form id="Login" method="POST" action="/userLogin">
 
                         <div class="form-group">
                             <input name="nethz" type="text" class="form-control" id="inputUsername" placeholder="Username">
