--- a/webserver/static/main_profile_edit.html
+++ b/webserver/static/main_profile_edit.html
@@ -4,8 +4,11 @@
 <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://unpkg.com/popper.js/dist/umd/popper.min.js"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+            integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+            crossorigin="anonymous"></script>
     <title>Courses
     </title>
 
@@ -100,152 +103,122 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-sm">
+
             <h2>
-                Attributes
+
                 <a href="#" class="btn btn-primary float-md-right" style="margin:5px">Save Feedback</a>
             </h2>
+
             <div class="card-rows">
                 <div class="card w-100">
-                    <ul class="list-group list-group-flush">
+                    <ul class="list-group  list-group-flush">
                         <li class="list-group-item">
-                            <div class="btn-group btn-group-toggle" data-toggle="buttons" role="group" aria-label="Basic example">
-                                <label class="btn btn-light">
-                                    <input type="radio" name="options" id="option1" autocomplete="off"> 1
-                                </label>
-                                <label class="btn btn-light">
-                                    <input type="radio" name="options" id="option1" autocomplete="off"> 2
-                                </label>
-                                <label class="btn btn-light">
-                                    <input type="radio" name="options" id="option1" autocomplete="off"> 3
-                                </label>
-                                <label class="btn btn-light">
-                                    <input type="radio" name="options" id="option1" autocomplete="off"> 4
-                                </label>
-                                <label class="btn btn-light active">
-                                    <input type="radio" name="options" id="option1" autocomplete="off" checked> 5
-                                </label>
-                                <label class="btn btn-light">
-                                    <input type="radio" name="options" id="option1" autocomplete="off"> 6
-                                </label>
-                                <label class="btn btn-light">
-                                    <input type="radio" name="options" id="option1" autocomplete="off"> 7
-                                </label>
-                                <label class="btn btn-light">
-                                    <input type="radio" name="options" id="option1" autocomplete="off"> 8
-                                </label>
-                                <label class="btn btn-light">
-                                    <input type="radio" name="options" id="option1" autocomplete="off"> 9
-                                </label>
-                                <label class="btn btn-light">
-                                    <input type="radio" name="options" id="option1" autocomplete="off"> 10
-                                </label>
+                            <h5 class="text-center">Speaks fluently</h5>
+                                <div class="btn-group btn-group-toggle btn-group-justified d-flex" data-toggle="buttons" role="group"
+                                     aria-label="Basic example">
+                                    <label class="btn btn-outline-secondary w-100">
+                                        <input type="radio" name="options" id="option9" autocomplete="off"> --
+                                    </label>
+                                    <label class="btn btn-outline-secondary w-100">
+                                        <input class="w-20" type="radio" name="options" id="option2" autocomplete="off"> -
+                                    </label>
+                                    <label class="btn btn-outline-secondary active w-100">
+                                        <input class="w-20" type="radio" name="options" id="option3" autocomplete="off" checked> ~
+                                    </label>
+                                    <label class="btn btn-outline-secondary w-100">
+                                        <input class="w-20" type="radio" name="options" id="option4" autocomplete="off"> +
+                                    </label>
+                                    <label class="btn btn-outline-secondary w-100">
+                                        <input class="w-20" type="radio" name="options" id="option5" autocomplete="off"> ++
+                                    </label>
                             </div>
-                            Speaks fluently
+                            <div>
+                                <p class="float-left">strongly disagree</p>
+                                <p class="float-right">strongly agree</p>
+                            </div>
+
+
                         </li>
                         <li class="list-group-item">
-                            <div class="btn-group btn-group-toggle" data-toggle="buttons" role="group" aria-label="Basic example">
-                                <label class="btn btn-light">
-                                    <input type="radio" name="options" id="option1" autocomplete="off"> 1
+                            <h5 class="text-center">Shows examples</h5>
+                            <div class="btn-group btn-group-toggle btn-group-justified d-flex" data-toggle="buttons" role="group"
+                                 aria-label="Basic example">
+                                <label class="btn btn-outline-secondary w-100">
+                                    <input type="radio" name="options" id="option9" autocomplete="off"> --
                                 </label>
-                                <label class="btn btn-light">
-                                    <input type="radio" name="options" id="option1" autocomplete="off"> 2
+                                <label class="btn btn-outline-secondary w-100">
+                                    <input class="w-20" type="radio" name="options" id="option2" autocomplete="off"> -
                                 </label>
-                                <label class="btn btn-light">
-                                    <input type="radio" name="options" id="option1" autocomplete="off"> 3
+                                <label class="btn btn-outline-secondary active w-100">
+                                    <input class="w-20" type="radio" name="options" id="option3" autocomplete="off" checked> ~
                                 </label>
-                                <label class="btn btn-light">
-                                    <input type="radio" name="options" id="option1" autocomplete="off"> 4
+                                <label class="btn btn-outline-secondary w-100">
+                                    <input class="w-20" type="radio" name="options" id="option4" autocomplete="off"> +
                                 </label>
-                                <label class="btn btn-light active">
-                                    <input type="radio" name="options" id="option1" autocomplete="off" checked> 5
-                                </label>
-                                <label class="btn btn-light">
-                                    <input type="radio" name="options" id="option1" autocomplete="off"> 6
-                                </label>
-                                <label class="btn btn-light">
-                                    <input type="radio" name="options" id="option1" autocomplete="off"> 7
-                                </label>
-                                <label class="btn btn-light">
-                                    <input type="radio" name="options" id="option1" autocomplete="off"> 8
-                                </label>
-                                <label class="btn btn-light">
-                                    <input type="radio" name="options" id="option1" autocomplete="off"> 9
-                                </label>
-                                <label class="btn btn-light">
-                                    <input type="radio" name="options" id="option1" autocomplete="off"> 10
+                                <label class="btn btn-outline-secondary w-100">
+                                    <input class="w-20" type="radio" name="options" id="option5" autocomplete="off"> ++
                                 </label>
                             </div>
-                            Shows Examples
+                            <div>
+                                <p class="float-left">strongly disagree</p>
+                                <p class="float-right">strongly agree</p>
+                            </div>
+
+
                         </li>
                         <li class="list-group-item">
-                            <div class="btn-group btn-group-toggle" data-toggle="buttons" role="group" aria-label="Basic example">
-                                <label class="btn btn-light">
-                                    <input type="radio" name="options" id="option1" autocomplete="off"> 1
+                            <h5 class="text-center">Revises lecture content</h5>
+                            <div class="btn-group btn-group-toggle btn-group-justified d-flex" data-toggle="buttons" role="group"
+                                 aria-label="Basic example">
+                                <label class="btn btn-outline-secondary w-100">
+                                    <input type="radio" name="options" id="option9" autocomplete="off"> --
                                 </label>
-                                <label class="btn btn-light">
-                                    <input type="radio" name="options" id="option1" autocomplete="off"> 2
+                                <label class="btn btn-outline-secondary w-100">
+                                    <input class="w-20" type="radio" name="options" id="option2" autocomplete="off"> -
                                 </label>
-                                <label class="btn btn-light">
-                                    <input type="radio" name="options" id="option1" autocomplete="off"> 3
+                                <label class="btn btn-outline-secondary active w-100">
+                                    <input class="w-20" type="radio" name="options" id="option3" autocomplete="off" checked> ~
                                 </label>
-                                <label class="btn btn-light">
-                                    <input type="radio" name="options" id="option1" autocomplete="off"> 4
+                                <label class="btn btn-outline-secondary w-100">
+                                    <input class="w-20" type="radio" name="options" id="option4" autocomplete="off"> +
                                 </label>
-                                <label class="btn btn-light active">
-                                    <input type="radio" name="options" id="option1" autocomplete="off" checked> 5
-                                </label>
-                                <label class="btn btn-light">
-                                    <input type="radio" name="options" id="option1" autocomplete="off"> 6
-                                </label>
-                                <label class="btn btn-light">
-                                    <input type="radio" name="options" id="option1" autocomplete="off"> 7
-                                </label>
-                                <label class="btn btn-light">
-                                    <input type="radio" name="options" id="option1" autocomplete="off"> 8
-                                </label>
-                                <label class="btn btn-light">
-                                    <input type="radio" name="options" id="option1" autocomplete="off"> 9
-                                </label>
-                                <label class="btn btn-light">
-                                    <input type="radio" name="options" id="option1" autocomplete="off"> 10
+                                <label class="btn btn-outline-secondary w-100">
+                                    <input class="w-20" type="radio" name="options" id="option5" autocomplete="off"> ++
                                 </label>
                             </div>
-                            Revises Lecture Content
+                            <div>
+                                <p class="float-left">strongly disagree</p>
+                                <p class="float-right">strongly agree</p>
+                            </div>
+
+
                         </li>
                         <li class="list-group-item">
-                            <div class="btn-group btn-group-toggle" data-toggle="buttons" role="group" aria-label="Basic example">
-                                <label class="btn btn-light">
-                                    <input type="radio" name="options" id="option1" autocomplete="off"> 1
+                            <h5 class="text-center">Has a strong presence</h5>
+                            <div class="btn-group btn-group-toggle btn-group-justified d-flex" data-toggle="buttons" role="group"
+                                 aria-label="Basic example">
+                                <label class="btn btn-outline-secondary w-100">
+                                    <input type="radio" name="options" id="option9" autocomplete="off"> --
                                 </label>
-                                <label class="btn btn-light">
-                                    <input type="radio" name="options" id="option1" autocomplete="off"> 2
+                                <label class="btn btn-outline-secondary w-100">
+                                    <input class="w-20" type="radio" name="options" id="option2" autocomplete="off"> -
                                 </label>
-                                <label class="btn btn-light">
-                                    <input type="radio" name="options" id="option1" autocomplete="off"> 3
+                                <label class="btn btn-outline-secondary active w-100">
+                                    <input class="w-20" type="radio" name="options" id="option3" autocomplete="off" checked> ~
                                 </label>
-                                <label class="btn btn-light">
-                                    <input type="radio" name="options" id="option1" autocomplete="off"> 4
+                                <label class="btn btn-outline-secondary w-100">
+                                    <input class="w-20" type="radio" name="options" id="option4" autocomplete="off"> +
                                 </label>
-                                <label class="btn btn-light active">
-                                    <input type="radio" name="options" id="option1" autocomplete="off" checked> 5
-                                </label>
-                                <label class="btn btn-light">
-                                    <input type="radio" name="options" id="option1" autocomplete="off"> 6
-                                </label>
-                                <label class="btn btn-light">
-                                    <input type="radio" name="options" id="option1" autocomplete="off"> 7
-                                </label>
-                                <label class="btn btn-light">
-                                    <input type="radio" name="options" id="option1" autocomplete="off"> 8
-                                </label>
-                                <label class="btn btn-light">
-                                    <input type="radio" name="options" id="option1" autocomplete="off"> 9
-                                </label>
-                                <label class="btn btn-light">
-                                    <input type="radio" name="options" id="option1" autocomplete="off"> 10
+                                <label class="btn btn-outline-secondary w-100">
+                                    <input class="w-20" type="radio" name="options" id="option5" autocomplete="off"> ++
                                 </label>
                             </div>
-                            REEEE
+                            <div>
+                                <p class="float-left">strongly disagree</p>
+                                <p class="float-right">strongly agree</p>
+                            </div>
+
+
                         </li>
                     </ul>
                 </div>
@@ -260,7 +233,8 @@
                 <div class="card" style="margin: 10px">
                     <div class="card-body">
                         <div class="input-group mb-3">
-                            <input type="text" class="form-control" placeholder="Title" aria-label="Username" aria-describedby="basic-addon1">
+                            <input type="text" class="form-control" placeholder="Title" aria-label="Username"
+                                   aria-describedby="basic-addon1">
                         </div>
                         <div class="input-group">
                             <textarea class="form-control" aria-label="With textarea"></textarea>
