added response for file upload

--- a/webserver/static/adminPage.html
+++ b/webserver/static/adminPage.html
@@ -92,6 +92,10 @@
                     method: 'POST',
                     body: data
                 }).then(function (response) {
+                    if(true){
+                        alert("you've uploaded " + data.get('file').name + " successfully");
+                    }
+                    //$(this).setAttribute()
                     return console.log(response.text());
                 })
             })
