--- a/webserver/static/adminPage.html
+++ b/webserver/static/adminPage.html
@@ -119,6 +119,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="#">My Feedback</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/static/userLogin.html">NETHZ Login</a>
+            </li>
             <li class="nav-item admin">
                 <a class="nav-link" href="/static/adminPage.html">Admin</a>
             </li>
