--- a/webserver/static/userLogin.html
+++ b/webserver/static/userLogin.html
@@ -45,7 +45,7 @@
                         </div>
                 
                         <div class="form-group">
-                            <input type="password" class="form-control" id="inputPassword" placeholder="Password"> 
+                            <input type="password" name="password" class="form-control" id="inputPassword" placeholder="Password"> 
                         </div>
                         
                         <button type="submit" class="btn btn-primary">Login</button>
